--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ api_secret = Pw_wzuZ3w8gAY9w2mi3TlUyrDuE
 
 client_customer_production_url = https://frontend-multi-vendor-ecommerce.vercel.app
 
-client_admin_production_url =
+client_admin_production_url = https://dashboard-multi-vendor-ecommerce-pi.vercel.app
