--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 PORT = 5000
-mode = pro
+MODE = pro
 DB_LOCAL_URL = mongodb://127.0.0.1:27017/ecommerce
 DB_PRO_URL = mongodb+srv://hamvaiferenc:6rzB4J8kGj10z4Y9@cluster0.egue5rw.mongodb.net/ecommerce
 SECRET = hamvai
-cloud_name = dtmsmbbzj
-api_key = 369955446716269
-api_secret = Pw_wzuZ3w8gAY9w2mi3TlUyrDuE
+CLOUD_NAME = dtmsmbbzj
+API_KEY = 369955446716269
+API_SECRET = Pw_wzuZ3w8gAY9w2mi3TlUyrDuE
 
-client_customer_production_url = https://frontend-multi-vendor-ecommerce.vercel.app
+CLIENT_CUSTOMER_PRODUCTION_URL = https://frontend-multi-vendor-ecommerce.vercel.app
 
-client_admin_production_url = https://dashboard-multi-vendor-ecommerce-pi.vercel.app
+CLIENT_ADMIN_PRODUCTION_URL= https://dashboard-multi-vendor-ecommerce-pi.vercel.app
